v4.9.0/_sources/generated/pcdsdevices.valve.GateValve.rst.txt
pcdsdevices.valve.GateValve
===========================

.. currentmodule:: pcdsdevices.valve

.. autoclass:: GateValve

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - state
          - :class:`~pcdsdevices.signal.PVStateSignal`
          - 
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.stopper.Stopper`
    
        * - open_limit
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_DI``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.stopper.Stopper`
    
        * - closed_limit
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:CLS_DI``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.stopper.Stopper`
    
        * - command
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:OPN_SW``
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.stopper.Stopper`
    
        * - interlock
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_OK``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_inserted
    .. automethod:: check_removed
    .. automethod:: check_transmission
    .. automethod:: close
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_state
    .. automethod:: insert
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: open
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: set
    .. automethod:: status
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: in_states
    .. autoattribute:: interlocked
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: out_states
    .. autoattribute:: position
    .. autoattribute:: settle_time
    .. autoattribute:: states_list
    .. autoattribute:: stop
    .. autoattribute:: timeout
    .. autoattribute:: transmission
    
    